--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "lint": "bun run --filter frontend lint",
     "test": "bun run --filter frontend test",
     "test:ui": "bun run --filter frontend test:ui"
+  },
+  "devDependencies": {
+    "shadcn": "^3.8.5"
   }
 }
